--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "commander": "^12.0.0"
+    "@types/prompts": "^2.4.9",
+    "chalk": "^4.1.2",
+    "commander": "^12.0.0",
+    "prompts": "^2.4.2"
   }
 }
