--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
     "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.2",
+    "@emotion/react": "^11.13.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -32,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-tsconfig-paths": "^5.1.3"
   }
 }
