--- a/app/package.json
+++ b/app/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.2",
     "@emotion/react": "^11.13.5",
+    "next-themes": "^0.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
